test/cases/compile_errors/top_level_doc_comment.zig
pub const foo = 5;

//! This is main.
pub fn main() void {}

// error
//
// 1:19: error: expected type expression, found 'a top-level document comment'
